--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1,1 +1,3 @@
-/* No CSS */
+body {
+  background: url(../../../assets/images/noise_transparent.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+}
