--- a/shelter/pages/main/css/style.css
+++ b/shelter/pages/main/css/style.css
@@ -48,12 +48,30 @@ body {
   padding: 0 40px;
 }
 
+@media (max-width: 1279.98px) {
+  .container {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .container {
+    padding: 0 10px;
+  }
+}
+
 .section-title {
   font-family: 'Georgia';
   font-size: 35px;
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #545454;
+}
+
+@media (max-width: 767.98px) {
+  .section-title {
+    font-size: 25px;
+  }
 }
 
 .primary-btn {
@@ -91,8 +109,75 @@ body {
           align-items: center;
 }
 
+@media (max-width: 1279.98px) {
+  .header__container {
+    padding-top: 30px;
+  }
+}
+
 .header__logo {
   text-align: right;
+}
+
+.header__burger {
+  position: relative;
+  display: none;
+  z-index: 3;
+  width: 30px;
+  height: 22px;
+  margin-right: 43px;
+}
+
+@media (max-width: 767.98px) {
+  .header__burger {
+    display: block;
+  }
+}
+
+.header__burger span {
+  width: 100%;
+  height: 2px;
+  background-color: #F1CDB3;
+}
+
+.header__burger::before, .header__burger::after {
+  content: '';
+}
+
+.header__burger::before, .header__burger::after, .header__burger span {
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: #F1CDB3;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.header__burger::before {
+  top: 0;
+}
+
+.header__burger::after {
+  bottom: 0;
+}
+
+.header__burger span {
+  top: 10px;
+}
+
+.header__burger.open::before {
+  -webkit-transform: rotate(90deg) translate(10px, 11px);
+          transform: rotate(90deg) translate(10px, 11px);
+}
+
+.header__burger.open::after {
+  -webkit-transform: rotate(90deg) translate(-10px, -9px);
+          transform: rotate(90deg) translate(-10px, -9px);
+}
+
+.header__burger.open span {
+  -webkit-transform: rotate(90deg) translate(0px, 1px);
+          transform: rotate(90deg) translate(0px, 1px);
 }
 
 .logo__title {
@@ -127,6 +212,33 @@ body {
   gap: 35px;
 }
 
+@media (max-width: 767.98px) {
+  .menu__list {
+    position: fixed;
+    top: 0;
+    right: -320px;
+    width: 320px;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #292929;
+    -webkit-transition: all 1s ease 0s;
+    transition: all 1s ease 0s;
+  }
+}
+
+.menu__list.open {
+  right: 0;
+}
+
 .menu__link {
   display: inline-block;
   line-height: 24px;
@@ -138,6 +250,13 @@ body {
 
 .menu__link:hover {
   color: #FAFAFA;
+}
+
+@media (max-width: 767.98px) {
+  .menu__link {
+    font-size: 32px;
+    line-height: 160%;
+  }
 }
 
 .menu__link_active {
@@ -161,9 +280,38 @@ body {
           align-items: start;
 }
 
+@media (max-width: 1279.98px) {
+  .start-screen__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
 .start-screen__content {
   width: 38.33333%;
   padding: 163px 0 243px 0;
+}
+
+@media (max-width: 1279.98px) {
+  .start-screen__content {
+    width: 64.97175%;
+    padding: 0 0 100px 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .start-screen__content {
+    width: 100%;
+    padding: 0 0 106px 0;
+  }
 }
 
 .start-screen__title {
@@ -174,9 +322,52 @@ body {
   color: #FFFFFF;
 }
 
+@media (max-width: 1279.98px) {
+  .start-screen__title {
+    font-size: 44px;
+    line-height: 130%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .start-screen__title {
+    font-size: 25px;
+    letter-spacing: 0.06em;
+    line-height: 128%;
+    text-align: center;
+  }
+}
+
 .start-screen__description {
   margin-bottom: 57px;
   color: #F6F6F6;
+}
+
+@media (max-width: 1279.98px) {
+  .start-screen__description {
+    margin-bottom: 42px;
+    text-align: justify;
+    font-size: 15px;
+    line-height: 160%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .start-screen__description {
+    text-align: center;
+  }
+}
+
+.start-screen__btn {
+  width: 208px;
+  height: 52px;
+}
+
+@media (max-width: 1279.98px) {
+  .start-screen__btn {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .start-screen__image {
@@ -184,10 +375,30 @@ body {
   height: auto;
 }
 
+@media (max-width: 1279.98px) {
+  .start-screen__image {
+    width: 80.22599%;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .start-screen__image {
+    width: 86.66667%;
+  }
+}
+
 .about {
   background-color: #FFFFFF;
   padding-top: 80px;
   padding-bottom: 100px;
+}
+
+@media (max-width: 767.98px) {
+  .about {
+    padding: 42px 0;
+  }
 }
 
 .about__container {
@@ -207,6 +418,32 @@ body {
   gap: 10%;
 }
 
+@media (max-width: 1279.98px) {
+  .about__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 80px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .about__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 19px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .about__image {
+    width: 86.66667%;
+  }
+}
+
 .about__content {
   width: 430px;
 }
@@ -215,10 +452,45 @@ body {
   margin-bottom: 25px;
 }
 
+@media (max-width: 1279.98px) {
+  .about__content {
+    width: 60.73446%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .about__content {
+    width: 100%;
+  }
+  .about__content *:not(:last-child) {
+    margin-bottom: 23px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .about__title {
+    text-align: center;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .about__text {
+    margin-bottom: 22px;
+    padding: 0 15px;
+    text-align: justify;
+  }
+}
+
 .our-friends {
   padding-top: 80px;
   padding-bottom: 100px;
   background-color: #F6F6F6;
+}
+
+@media (max-width: 767.98px) {
+  .our-friends {
+    padding: 42px 0;
+  }
 }
 
 .our-friends__title {
@@ -226,8 +498,26 @@ body {
   margin-bottom: 60px;
 }
 
+@media (max-width: 1279.98px) {
+  .our-friends__title {
+    margin-bottom: 58px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .our-friends__title {
+    margin-bottom: 41px;
+  }
+}
+
 .our-friends__slider {
-  margin-bottom: 59px;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 767.98px) {
+  .our-friends__slider {
+    margin-bottom: 42px;
+  }
 }
 
 .our-friends__btn {
@@ -259,6 +549,33 @@ body {
           align-items: center;
 }
 
+@media (max-width: 1279.98px) {
+  .slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 12px;
+            column-gap: 12px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .slider {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (auto)[2];
+        grid-template-rows: repeat(2, auto);
+    -webkit-column-gap: 80px;
+            column-gap: 80px;
+    row-gap: 20px;
+  }
+}
+
 .slider__cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -266,6 +583,29 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media (max-width: 1279.98px) {
+  .slider__cards {
+    -ms-flex-preferred-size: 580px;
+        flex-basis: 580px;
+    -webkit-box-flex: 0.3;
+        -ms-flex-positive: 0.3;
+            flex-grow: 0.3;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 6.89655%;
+            column-gap: 6.89655%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .slider__cards {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
 }
 
 .slider__prev {
@@ -294,6 +634,16 @@ body {
   background-color: #FDDCC4;
 }
 
+@media (max-width: 767.98px) {
+  .slider__prev {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
 .slider__next {
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -319,6 +669,14 @@ body {
   background-color: #F1CDB3;
 }
 
+@media (max-width: 767.98px) {
+  .slider__next {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+}
+
 .pet {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -340,6 +698,18 @@ body {
   transition: 0.3s;
 }
 
+@media (max-width: 1279.98px) {
+  .pet:nth-child(3) {
+    display: none;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pet:nth-child(2) {
+    display: none;
+  }
+}
+
 .pet:hover {
   cursor: pointer;
   background-color: #FFFFFF;
@@ -355,7 +725,8 @@ body {
 }
 
 .pet:hover .pet__btn:hover {
-  background-color: rgba(253, 220, 196, 0.5);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .pet * {
@@ -394,18 +765,27 @@ body {
   color: #292929;
 }
 
-.main__help {
+.help {
   padding-top: 80px;
   padding-bottom: 100px;
+  background-color: #FFFFFF;
 }
 
-.help {
-  background-color: #FFFFFF;
+@media (max-width: 767.98px) {
+  .help {
+    padding: 42px 0;
+  }
 }
 
 .help__title {
   margin-bottom: 60px;
   text-align: center;
+}
+
+@media (max-width: 767.98px) {
+  .help__title {
+    margin-bottom: 42px;
+  }
 }
 
 .help__list {
@@ -424,12 +804,57 @@ body {
   row-gap: 55px;
 }
 
+@media (max-width: 1279.98px) {
+  .help__list {
+    margin: 0 auto;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (170px)[3];
+        grid-template-columns: repeat(3, 170px);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    width: 88.98305%;
+    -webkit-column-gap: 9.47458%;
+            column-gap: 9.47458%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .help__list {
+    width: 100%;
+    -ms-grid-columns: (130px)[2];
+        grid-template-columns: repeat(2, 130px);
+    -webkit-column-gap: 30px;
+            column-gap: 30px;
+    row-gap: 29px;
+  }
+}
+
 .help__item {
   text-align: center;
 }
 
+@media (max-width: 1279.98px) {
+  .help__item {
+    width: 170px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .help__item {
+    width: 130px;
+  }
+}
+
 .help__icon {
   margin-bottom: 30px;
+}
+
+@media (max-width: 767.98px) {
+  .help__icon {
+    width: 50px;
+    margin-bottom: 21px;
+  }
 }
 
 .help__text {
@@ -440,15 +865,23 @@ body {
   color: #545454;
 }
 
-.main__donation {
-  padding-top: 80px;
-  padding-bottom: 100px;
+@media (max-width: 767.98px) {
+  .help__text {
+    font-size: 15px;
+    line-height: 1.1;
+  }
 }
 
 .donation {
   padding-top: 80px;
   padding-bottom: 100px;
   background-color: #F6F6F6;
+}
+
+@media (max-width: 767.98px) {
+  .donation {
+    padding: 42px 0;
+  }
 }
 
 .donation__container {
@@ -469,22 +902,73 @@ body {
           column-gap: 30px;
 }
 
+@media (max-width: 1279.98px) {
+  .donation__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 60px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .donation__container {
+    row-gap: 41px;
+  }
+}
+
 .donation__image {
-  -ms-flex-preferred-size: 505px;
-      flex-basis: 505px;
   -ms-flex-negative: 1;
       flex-shrink: 1;
 }
 
+@media (max-width: 1279.98px) {
+  .donation__image {
+    width: 71.32768%;
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .donation__image {
+    width: 86.66667%;
+  }
+}
+
 .donation__content {
-  -ms-flex-preferred-size: 380px;
-      flex-basis: 380px;
+  width: 380px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
 
+@media (max-width: 1279.98px) {
+  .donation__content {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    width: 53.67232%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .donation__content {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 .donation__title {
   margin-bottom: 18px;
+}
+
+@media (max-width: 767.98px) {
+  .donation__title {
+    margin-bottom: 20px;
+  }
 }
 
 .donation__subtitle {
@@ -494,6 +978,14 @@ body {
   line-height: 1.1;
   letter-spacing: 0.06em;
   color: #545454;
+}
+
+@media (max-width: 767.98px) {
+  .donation__subtitle {
+    letter-spacing: 0;
+    font-size: 15px;
+    line-height: 160%;
+  }
 }
 
 .donation__link {
@@ -510,6 +1002,14 @@ body {
   background-color: #F1CDB3;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+
+@media (max-width: 767.98px) {
+  .donation__link {
+    text-align: center;
+    font-size: 15px;
+    line-height: 160%;
+  }
 }
 
 .donation__link:hover {
@@ -532,8 +1032,21 @@ body {
   color: #B2B2B2;
 }
 
+@media (max-width: 767.98px) {
+  .donation__text {
+    padding: 0 10px;
+    text-align: justify;
+  }
+}
+
 .footer__container {
   margin-top: 40px;
+}
+
+@media (max-width: 1279.98px) {
+  .footer__container {
+    margin-top: 30px;
+  }
 }
 
 .footer__row {
@@ -547,6 +1060,40 @@ body {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+}
+
+@media (max-width: 1279.98px) {
+  .footer__row {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-columns: 279px 302px;
+        grid-template-columns: 279px 302px;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    height: auto;
+    -webkit-column-gap: 8.47458%;
+            column-gap: 8.47458%;
+    row-gap: 66px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__row {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    row-gap: 0px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .footer__contacts {
@@ -565,12 +1112,38 @@ body {
           justify-content: space-between;
 }
 
+@media (max-width: 1279.98px) {
+  .footer__contacts {
+    height: 234px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__contacts {
+    height: auto;
+    width: auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footer__title {
   font-family: 'Georgia';
   font-size: 35px;
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #FFFFFF;
+}
+
+@media (max-width: 767.98px) {
+  .footer__title {
+    padding: 0 10px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 25px;
+  }
 }
 
 .footer__email {
@@ -588,6 +1161,12 @@ body {
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #F1CDB3;
+}
+
+@media (max-width: 767.98px) {
+  .footer__email {
+    margin-bottom: 40px;
+  }
 }
 
 .footer__email img {
@@ -610,7 +1189,47 @@ body {
           justify-content: space-between;
 }
 
+@media (max-width: 1279.98px) {
+  .footer__location {
+    height: 234px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__location {
+    width: auto;
+    height: auto;
+  }
+  .footer__location *:not(:first-child) {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
 .footer__image {
   width: 300px;
   min-height: 310px;
+}
+
+@media (max-width: 1279.98px) {
+  .footer__image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    min-height: auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__image {
+    min-height: auto;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    width: 86.66667%;
+  }
 }
