--- a/shelter/pages/pets/css/style.css
+++ b/shelter/pages/pets/css/style.css
@@ -44,12 +44,30 @@ html {
   padding: 0 40px;
 }
 
+@media (max-width: 1279.98px) {
+  .container {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .container {
+    padding: 0 10px;
+  }
+}
+
 .section-title {
   font-family: 'Georgia';
   font-size: 35px;
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #545454;
+}
+
+@media (max-width: 767.98px) {
+  .section-title {
+    font-size: 25px;
+  }
 }
 
 .primary-btn {
@@ -96,6 +114,61 @@ html {
   text-align: right;
 }
 
+.header__burger {
+  position: relative;
+  display: none;
+  z-index: 3;
+  width: 30px;
+  height: 22px;
+  margin-right: 43px;
+}
+
+@media (max-width: 767.98px) {
+  .header__burger {
+    display: block;
+  }
+}
+
+.header__burger::before, .header__burger::after {
+  content: '';
+}
+
+.header__burger::before, .header__burger::after, .header__burger span {
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: #000000;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.header__burger::before {
+  top: 0;
+}
+
+.header__burger::after {
+  bottom: 0;
+}
+
+.header__burger span {
+  top: 10px;
+}
+
+.header__burger.open::before {
+  -webkit-transform: rotate(90deg) translate(10px, 11px);
+          transform: rotate(90deg) translate(10px, 11px);
+}
+
+.header__burger.open::after {
+  -webkit-transform: rotate(90deg) translate(-10px, -9px);
+          transform: rotate(90deg) translate(-10px, -9px);
+}
+
+.header__burger.open span {
+  -webkit-transform: rotate(90deg) translate(0px, 1px);
+          transform: rotate(90deg) translate(0px, 1px);
+}
+
 .logo__title {
   margin-bottom: 10px;
   font-family: 'Georgia';
@@ -128,6 +201,33 @@ html {
   gap: 35px;
 }
 
+@media (max-width: 767.98px) {
+  .menu__list {
+    position: fixed;
+    top: 0;
+    right: -320px;
+    width: 320px;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #FFFFFF;
+    -webkit-transition: all 1s ease 0s;
+    transition: all 1s ease 0s;
+  }
+}
+
+.menu__list.open {
+  right: 0;
+}
+
 .menu__link {
   display: inline-block;
   line-height: 24px;
@@ -135,6 +235,13 @@ html {
   color: #545454;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+
+@media (max-width: 767.98px) {
+  .menu__link {
+    font-size: 32px;
+    line-height: 160%;
+  }
 }
 
 .menu__link:hover {
@@ -152,13 +259,37 @@ html {
   background-color: #F6F6F6;
 }
 
+@media (max-width: 1279.98px) {
+  .our-friends {
+    padding-bottom: 75px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .our-friends {
+    padding: 42px 0;
+  }
+}
+
 .our-friends__title {
   text-align: center;
   margin-bottom: 59px;
 }
 
+@media (max-width: 1279.98px) {
+  .our-friends__title {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .our-friends__title {
+    margin-bottom: 42px;
+  }
+}
+
 .our-friends .our-friends__cards {
-  margin-bottom: 60px;
+  margin: 0 auto 60px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -167,6 +298,29 @@ html {
   -webkit-column-gap: 40px;
           column-gap: 40px;
   row-gap: 30px;
+}
+
+@media (max-width: 1279.98px) {
+  .our-friends .our-friends__cards {
+    margin: 0 auto 40px auto;
+    width: 81.9209%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .our-friends .our-friends__cards {
+    width: 270px;
+    overflow: hidden;
+    -ms-grid-columns: 270px;
+        grid-template-columns: 270px;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+  }
 }
 
 .pet {
@@ -191,6 +345,18 @@ html {
   transition: 0.3s;
 }
 
+@media (max-width: 1279.98px) {
+  .pet:nth-child(7), .pet:nth-child(8) {
+    display: none;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pet:nth-child(6), .pet:nth-child(5), .pet:nth-child(4) {
+    display: none;
+  }
+}
+
 .pet:hover {
   cursor: pointer;
   background-color: #FFFFFF;
@@ -206,7 +372,8 @@ html {
 }
 
 .pet:hover .pet__btn:hover {
-  background-color: rgba(253, 220, 196, 0.5);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .pet * {
@@ -258,6 +425,13 @@ html {
           justify-content: center;
   -webkit-column-gap: 20px;
           column-gap: 20px;
+}
+
+@media (max-width: 767.98px) {
+  .navigation {
+    -webkit-column-gap: 10px;
+            column-gap: 10px;
+  }
 }
 
 .navigation__btn {
@@ -319,6 +493,12 @@ html {
   margin-top: 40px;
 }
 
+@media (max-width: 1279.98px) {
+  .footer__container {
+    margin-top: 30px;
+  }
+}
+
 .footer__row {
   height: 310px;
   display: -webkit-box;
@@ -330,6 +510,40 @@ html {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+}
+
+@media (max-width: 1279.98px) {
+  .footer__row {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-columns: 279px 302px;
+        grid-template-columns: 279px 302px;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    height: auto;
+    -webkit-column-gap: 8.47458%;
+            column-gap: 8.47458%;
+    row-gap: 66px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__row {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    row-gap: 0px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .footer__contacts {
@@ -348,12 +562,38 @@ html {
           justify-content: space-between;
 }
 
+@media (max-width: 1279.98px) {
+  .footer__contacts {
+    height: 234px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__contacts {
+    height: auto;
+    width: auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footer__title {
   font-family: 'Georgia';
   font-size: 35px;
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #FFFFFF;
+}
+
+@media (max-width: 767.98px) {
+  .footer__title {
+    padding: 0 10px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 25px;
+  }
 }
 
 .footer__email {
@@ -371,6 +611,12 @@ html {
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #F1CDB3;
+}
+
+@media (max-width: 767.98px) {
+  .footer__email {
+    margin-bottom: 40px;
+  }
 }
 
 .footer__email img {
@@ -393,7 +639,45 @@ html {
           justify-content: space-between;
 }
 
+@media (max-width: 1279.98px) {
+  .footer__location {
+    height: 234px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__location {
+    width: auto;
+    height: auto;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
 .footer__image {
   width: 300px;
   min-height: 310px;
+}
+
+@media (max-width: 1279.98px) {
+  .footer__image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    min-height: auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer__image {
+    min-height: auto;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    width: 86.66667%;
+  }
 }
