--- a/shelter/pages/main/css/style.css
+++ b/shelter/pages/main/css/style.css
@@ -60,6 +60,15 @@ body {
   }
 }
 
+body.lock {
+  overflow: hidden;
+}
+
+body.lock .header__overlay {
+  display: block;
+  right: 0;
+}
+
 .section-title {
   font-family: 'Georgia';
   font-size: 35px;
@@ -117,6 +126,19 @@ body {
 
 .header__logo {
   text-align: right;
+}
+
+.header__overlay {
+  position: fixed;
+  top: 0;
+  right: -100vw;
+  width: 100vw;
+  height: 100vh;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  background-color: #292929;
+  opacity: 0.6;
+  z-index: 1;
 }
 
 .header__burger {
@@ -198,6 +220,16 @@ body {
   color: #FFFFFF;
 }
 
+.menu__logo {
+  position: absolute;
+  right: 126px;
+  top: 30px;
+  -webkit-transform: translateY(-100px);
+          transform: translateY(-100px);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,13 +262,20 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
     background-color: #292929;
-    -webkit-transition: all 1s ease 0s;
-    transition: all 1s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    z-index: 2;
   }
 }
 
 .menu__list.open {
   right: 0;
+}
+
+.menu__list.open + .menu__logo {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  z-index: 5;
 }
 
 .menu__link {
@@ -542,11 +581,10 @@ body {
   display: grid;
   -ms-grid-columns: 52px auto 52px;
       grid-template-columns: 52px auto 52px;
-  -webkit-column-gap: 52px;
-          column-gap: 52px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  justify-items: center;
 }
 
 @media (max-width: 1279.98px) {
@@ -557,8 +595,6 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-column-gap: 12px;
-            column-gap: 12px;
   }
 }
 
@@ -576,35 +612,66 @@ body {
   }
 }
 
-.slider__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.slider__wrapper {
+  width: 1094px;
+  padding: 0 52px;
+  overflow: hidden;
 }
 
 @media (max-width: 1279.98px) {
-  .slider__cards {
-    -ms-flex-preferred-size: 580px;
-        flex-basis: 580px;
-    -webkit-box-flex: 0.3;
-        -ms-flex-positive: 0.3;
-            flex-grow: 0.3;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-column-gap: 6.89655%;
-            column-gap: 6.89655%;
+  .slider__wrapper {
+    width: 604px;
+    padding: 0 12px;
   }
 }
 
 @media (max-width: 767.98px) {
-  .slider__cards {
+  .slider__wrapper {
+    width: 270px;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+}
+
+.slider__cards {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  left: 0px;
+}
+
+.slider__cards > * {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 90px;
+          column-gap: 90px;
+  width: 1094px;
+  padding: 0 52px;
+}
+
+@media (max-width: 1279.98px) {
+  .slider__cards > * {
+    padding: 0 12px;
+    width: 604px;
+    -webkit-column-gap: 40px;
+            column-gap: 40px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .slider__cards > * {
+    width: 270px;
   }
 }
 
@@ -674,6 +741,134 @@ body {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+}
+
+@-webkit-keyframes move-next {
+  from {
+    left: 0px;
+  }
+  to {
+    left: -1094px;
+  }
+}
+
+@keyframes move-next {
+  from {
+    left: 0px;
+  }
+  to {
+    left: -1094px;
+  }
+}
+
+.transition-right {
+  -webkit-animation-name: 'move-next';
+          animation-name: 'move-next';
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+@media (max-width: 1279.98px) {
+  @-webkit-keyframes move-next {
+    from {
+      left: 0;
+    }
+    to {
+      left: -604px;
+    }
+  }
+  @keyframes move-next {
+    from {
+      left: 0;
+    }
+    to {
+      left: -604px;
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  @-webkit-keyframes move-next {
+    from {
+      left: 0;
+    }
+    to {
+      left: -270px;
+    }
+  }
+  @keyframes move-next {
+    from {
+      left: 0;
+    }
+    to {
+      left: -270px;
+    }
+  }
+}
+
+@-webkit-keyframes move-prev {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 1094px;
+  }
+}
+
+@keyframes move-prev {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 1094px;
+  }
+}
+
+.transition-left {
+  -webkit-animation-name: 'move-prev';
+          animation-name: 'move-prev';
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+@media (max-width: 1279.98px) {
+  @-webkit-keyframes move-prev {
+    from {
+      left: 0;
+    }
+    to {
+      left: 604px;
+    }
+  }
+  @keyframes move-prev {
+    from {
+      left: 0;
+    }
+    to {
+      left: 604px;
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  @-webkit-keyframes move-prev {
+    from {
+      left: 0;
+    }
+    to {
+      left: 270px;
+    }
+  }
+  @keyframes move-prev {
+    from {
+      left: 0;
+    }
+    to {
+      left: 270px;
+    }
   }
 }
 
@@ -691,11 +886,13 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  width: 270px / 1200px;
+  width: 270px;
+  height: 435px;
   border-radius: 9px;
   background-color: #FAFAFA;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  overflow-x: hidden;
 }
 
 @media (max-width: 1279.98px) {
@@ -731,6 +928,10 @@ body {
 
 .pet * {
   margin-bottom: 30px;
+}
+
+.pet__photo {
+  height: 270px;
 }
 
 .pet__name {
@@ -1232,4 +1433,173 @@ body {
     grid-column: 1 / 2;
     width: 86.66667%;
   }
+}
+
+.overlay {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  cursor: pointer;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(41, 41, 41, 0.4);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.overlay:hover > div:not(:hover) .modal__btn-close {
+  border: 2px solid #FDDCC4;
+  background-color: #FDDCC4;
+}
+
+.overlay.open {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.modal {
+  position: relative;
+  width: 70.3125%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 9px;
+          column-gap: 9px;
+  background-color: #FAFAFA;
+  color: #000000;
+  cursor: auto;
+}
+
+@media (max-width: 1279.98px) {
+  .modal {
+    width: 82.03125%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .modal {
+    width: 75%;
+  }
+}
+
+.modal__btn-close {
+  position: absolute;
+  right: -42px;
+  top: -52px;
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 100px;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.modal__btn-close:hover {
+  border: 2px solid #FDDCC4;
+  background-color: #FDDCC4;
+}
+
+@media (max-width: 767.98px) {
+  .modal__btn-close {
+    right: -30px;
+  }
+}
+
+.modal__image {
+  width: 500px;
+}
+
+@media (max-width: 1279.98px) {
+  .modal__image {
+    width: 350px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .modal__image {
+    display: none;
+  }
+}
+
+.modal__content {
+  padding: 50px 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+
+@media (max-width: 1279.98px) {
+  .modal__content {
+    padding: 10px;
+  }
+}
+
+.modal__name {
+  font-size: 35px;
+  line-height: 130%;
+  margin-bottom: 10px;
+}
+
+.modal__type {
+  font-size: 20px;
+  line-height: 115%;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1279.98px) {
+  .modal__type {
+    margin-bottom: 20px;
+  }
+}
+
+.modal__description {
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1279.98px) {
+  .modal__description {
+    margin-bottom: 20px;
+  }
+}
+
+.modal__info-about-pet li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 1279.98px) {
+  .modal__info-about-pet li:not(:last-child) {
+    margin-bottom: 5px;
+  }
+}
+
+.modal__info-about-pet span {
+  font-weight: 700;
 }
