--- a/shelter/pages/main/scss/style.scss
+++ b/shelter/pages/main/scss/style.scss
@@ -79,6 +79,15 @@ body {
         padding: 0 10px;
     }
 }
+
+body.lock {
+    overflow: hidden;
+
+    .header__overlay {
+        display: block;
+        right: 0;
+    }
+}
 // ======= bloks =====
 .section-title {
     font-family: 'Georgia';
@@ -131,7 +140,17 @@ body {
     }
     &__menu {
     }
-
+    &__overlay {
+        position: fixed;
+        top: 0;
+        right: -100vw;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.3s;
+        background-color: $color-dark-3xl;
+        opacity: 0.6;
+        z-index: 1;
+    }
     &__burger {
         position: relative;
         display: none;
@@ -214,14 +233,24 @@ body {
 
 
 .menu {
-    
+    // position: relative;
+    &__logo {
+        position: absolute;
+        right: 126px;
+        top: 30px;
+
+transform: translateY(-100px);
+        // transform: scale(0);
+        transition: 0.5s;
+        // transition-delay: 0.s;
+    }
     &__list {
         display: flex;
         flex-direction: row;
         // justify-content: space-between;
         align-items: center;
         gap: 35px;
-
+        
         @include small() {
             position: fixed;
             top: 0;
@@ -232,12 +261,21 @@ body {
             align-items: center;
             justify-content: center;
             background-color: $color-dark-3xl;
-            transition: all 1s ease 0s;
-
-            
+            transition: all 0.5s ease 0s;
+            // overflow-y: scroll;
+            z-index: 2
         }
         &.open {
             right: 0;
+            // box-shadow: 0 0 0 500px rgba(41, 41, 41, 0.6);
+            & + .menu__logo {
+                transform: translateY(0px);
+
+                // opacity: 1;
+                // transform: scale(1);
+                z-index: 5;
+                // display: block;
+            }
         }
         
     }
@@ -486,39 +524,73 @@ body {
 .slider {
     display: grid;
     grid-template-columns: 52px auto 52px;
-    column-gap: 52px;
+    // column-gap: 52px;
     align-items: center;
+    justify-items: center; 
     
     @include medium() {
         display: flex;
         justify-content: center;
-        column-gap: 12px;
+        // column-gap: 12px;
     }
 
     @include small() {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, auto);
-        // flex-wrap: wrap;
         column-gap: 80px;
         row-gap: 20px;
+        // justify-content: center;
+    }
+    &__wrapper {
+        width: 1094px;
+        padding: 0 52px;
+        overflow: hidden;
+        
+        @include medium() {
+            width: 604px;
+            padding: 0 12px;
+
+        }
+        @include small() {
+            width: 270px;
+            grid-column: 1 / 3;
+            justify-self: center;
+        }
     }
     &__cards {
+        position: relative;
         display: flex;
-        justify-content: space-between;
-        // column-gap: 7.5%;
-        @include medium() {
-            flex-basis: 580px;
-            flex-grow: 0.3;
-            justify-content: center;
-            column-gap: (40 / 580 * 100%);
-        }
+        justify-content: center;
+        left: 0px;
 
-        @include small() {
-            grid-column: 1 / 3;
+        
+        & > * {
+            display: flex;
+            justify-content: center;
+            column-gap: 90px;
+            width: 1094px;
+            padding: 0 52px;
+        }
+        @include medium() {
+            & > * {
+                padding: 0 12px;
+                width: 604px;
+                column-gap: 40px;
+            }
+
         }
         
+        @include small() {
+            & > * {
+            width: 270px;
+            }
+    
+        }
+
+
     }
+
     &__item {
     
     }
@@ -558,23 +630,90 @@ body {
         &:hover {
             background-color: $color-primary;
         }
-    
+        
         @include small() {
             order: 3;
+            justify-self: start;
         }
     }
     
     
 }
+
+@keyframes move-next {
+    from {left: 0px;}
+    to {left: -1094px;}
+}
+
+.transition-right {
+    animation-name: 'move-next';
+    animation-duration: 1s;
+}
+@include medium() {
+    @keyframes move-next {
+        from {left: 0}
+        to {left: -604px;}
+    }
+    // .transition-right {
+    //     animation-name: 'move-next';
+    //     animation-duration: 0.7s;
+    // }
+}
+@include small() {
+    @keyframes move-next {
+        from {left: 0}
+        to {left: -270px;}
+    }
+    // .transition-right {
+    //     animation-name: 'move-next';
+    //     animation-duration: 0.4s;
+    // }
+}
+
+@keyframes move-prev {
+    from {left: 0px;}
+    to {left: 1094px;}
+}
+.transition-left {
+    animation-name: 'move-prev';
+    animation-duration: 1s;
+}
+
+@include medium() {
+    @keyframes move-prev {
+        from {left: 0}
+        to {left: 604px;}
+    }
+    // .transition-left {
+    //     animation-name: 'move-prev';
+    //     animation-duration: 0.7s;
+    // }
+}
+@include small() {
+    @keyframes move-prev {
+        from {left: 0}
+        to {left: 270px;}
+    }
+    // .transition-left {
+    //     animation-name: 'move-prev';
+    //     animation-duration: 0.4s;
+    // }
+}
+
+
+
 .pet {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    width: 270px / 1200px;
+    width: 270px;
+    height: 435px;
     border-radius: 9px;
     background-color: $color-light-s;
     transition: 0.3s;
+    overflow-x: hidden;
+
 
     @include medium() {
         &:nth-child(3) {
@@ -610,6 +749,8 @@ body {
     }
 
     &__photo {
+        height: 270px;
+        // width: 270px;
     }
     &__name {
         font-family: 'Georgia';
@@ -963,5 +1104,141 @@ body {
         }
         // flex-shrink: 0;
 
+    }
+}
+
+
+
+.overlay {
+        transform: scale(0);
+        cursor: pointer;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: transparentize($color-dark-3xl, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.1s;
+        &:hover>div:not(:hover) .modal__btn-close {
+            border: 2px solid $color-primary-light;
+            background-color: $color-primary-light;
+        }
+        &.open {
+            transform: scale(1);
+        }
+    }
+    
+    .modal {
+    // overflow-y: auto;
+    position: relative;
+    width: (900 / 1280) * 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    column-gap: 9px;
+    background-color: $color-light-s;
+    color: $color-dark;
+    cursor: auto;
+    
+    @include medium() {
+        width: (630 / 768) * 100%;
+
+    }
+
+    @include small() {
+        width: (240 / 320) * 100%;
+    }
+    // &:hover>div:not(:hover) .modal__btn-close {
+    //     border: 2px solid $color-primary;
+    //     background-color: transparent;
+    // }
+
+    &__btn-close {
+        position: absolute;
+        right: -42px;
+        top: -52px;
+        width: 52px;
+        height: 52px;
+        border: 2px solid $color-primary;
+        box-sizing: border-box;
+        border-radius: 100px;
+        background-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.3s;
+        
+        &:hover {
+            border: 2px solid $color-primary-light;
+            background-color: $color-primary-light;
+        }
+
+        @include small() {
+            right: -30px;
+        }
+    }
+    &__image {
+        width: 500px;
+        @include medium() {
+            width: 350px;
+        }
+        @include small() {
+            display: none;
+        }
+    }
+    &__content {
+        padding: 50px 20px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 15px;
+        line-height: 110%;
+        letter-spacing: 0.06em;
+        @include medium() {
+            padding: 10px;
+
+        }
+    }
+    &__name {
+        font-size: 35px;
+        line-height: 130%;
+        margin-bottom: 10px;
+    }
+    &__type {
+        font-size: 20px;
+        line-height: 115%;
+        margin-bottom: 40px;
+        
+        @include medium() {
+            margin-bottom: 20px;
+        }
+    }
+    &__description {
+        margin-bottom: 40px;
+        @include medium() {
+            margin-bottom: 20px;
+        }
+
+    }
+    &__info-about-pet {
+
+        li:not(:last-child) {
+            margin-bottom: 10px;
+            @include medium(){
+                
+                margin-bottom: 5px;
+            }
+        }
+        & span {
+            font-weight: 700;
+        }
+    }
+    &__age {
+    }
+    &__inoculations {
+
+    }
+    &__diseases {
+    }
+    &__parasites {
     }
 }
